- Create Calculator Design/UI

--- a/index.html
+++ b/index.html
@@ -10,6 +10,40 @@
     </head>
 
     <body>
-
+        <div class="calculator">
+            <div id="solar">
+                <div class="cells"></div>
+                <div class="cells lines"></div>
+                <div class="cells lines"></div>
+                <div class="cells lines"></div>
+            </div>
+            <div id="display"></div>
+            <div id="buttons">
+                <div class="button ac">AC</div>
+                <div class="button">+/-</div>
+                <div class="button">√</div>
+                <div class="button">%</div>
+                <div class="button">DEL</div>
+                <div class="button">X^2</div>
+                <div class="button">X^3</div>
+                <div class="button">÷</div>
+                <div class="button">7</div>
+                <div class="button">8</div>
+                <div class="button">9</div>
+                <div class="button">x</div>
+                <div class="button">4</div>
+                <div class="button">5</div>
+                <div class="button">6</div>
+                <div class="button">-</div>
+                <div class="button">1</div>
+                <div class="button">2</div>
+                <div class="button">3</div>
+                <div class="button plus">+</div>
+                <div class="button">0</div>
+                <div class="button">.</div>
+                <div class="button">ANS</div>
+                <div class="button">=</div>
+            </div>
+        </div>
     </body>
 </html>
