Integrate functions with Calculator UI
- Calculator is able to do simple arithmetic with two numbers

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
                 <div class="cells lines"></div>
                 <div class="cells lines"></div>
             </div>
-            <div id="display"></div>
+            <div id="display">
+                <div id="operator"></div>
+            </div>
             <div id="buttons">
                 <div class="button ac">AC</div>
                 <div class="button">+/-</div>
@@ -26,23 +28,23 @@
                 <div class="button">DEL</div>
                 <div class="button">X^2</div>
                 <div class="button">X^3</div>
-                <div class="button">÷</div>
-                <div class="button">7</div>
-                <div class="button">8</div>
-                <div class="button">9</div>
-                <div class="button">x</div>
-                <div class="button">4</div>
-                <div class="button">5</div>
-                <div class="button">6</div>
-                <div class="button">-</div>
-                <div class="button">1</div>
-                <div class="button">2</div>
-                <div class="button">3</div>
-                <div class="button plus">+</div>
-                <div class="button">0</div>
+                <div class="button operator" id="divide">÷</div>
+                <div class="button number" id="7">7</div>
+                <div class="button number" id="8">8</div>
+                <div class="button number" id="9">9</div>
+                <div class="button operator" id="multiply">x</div>
+                <div class="button number" id="4">4</div>
+                <div class="button number" id="5">5</div>
+                <div class="button number" id="6">6</div>
+                <div class="button operator" id="subtract">-</div>
+                <div class="button number" id="1">1</div>
+                <div class="button number" id="2">2</div>
+                <div class="button number" id="3">3</div>
+                <div class="button operator" id="add">+</div>
+                <div class="button number">0</div>
                 <div class="button">.</div>
                 <div class="button">ANS</div>
-                <div class="button">=</div>
+                <div class="button" id="equals">=</div>
             </div>
         </div>
     </body>
