Add functionality to clear button

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <div id="operator"></div>
             </div>
             <div id="buttons">
-                <div class="button ac">AC</div>
+                <div class="button ac" id="clear">AC</div>
                 <div class="button">+/-</div>
                 <div class="button">√</div>
                 <div class="button">%</div>
