Add functionality to 0 (number button)
- Calculator will overwrite the first zero digit, if user continues to input more numbers
- Continuous input of zeroes when first digit is non-zero will execute fine

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
                 <div class="button number" id="2">2</div>
                 <div class="button number" id="3">3</div>
                 <div class="button operator" id="add">+</div>
-                <div class="button number">0</div>
+                <div class="button number" id="0">0</div>
                 <div class="button">.</div>
-                <div class="button">ANS</div>
+                <div class="button" id="answer">ANS</div>
                 <div class="button" id="equals">=</div>
             </div>
         </div>
