Add functions that enables calc to use decimals

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div class="button number" id="3">3</div>
                 <div class="button operator" id="add">+</div>
                 <div class="button number" id="0">0</div>
-                <div class="button">.</div>
+                <div class="button" id="decimal">.</div>
                 <div class="button" id="answer">ANS</div>
                 <div class="button" id="equals">=</div>
             </div>
