--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                 <div class="button">√</div>
                 <div class="button">%</div>
                 <div class="button">DEL</div>
-                <div class="button">X^2</div>
-                <div class="button">X^3</div>
+                <div class="button" id="square">X^2</div>
+                <div class="button" id="cube">X^3</div>
                 <div class="button operator" id="divide">÷</div>
                 <div class="button number" id="7">7</div>
                 <div class="button number" id="8">8</div>
