Add functionality to square root button

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div id="buttons">
                 <div class="button ac" id="clear">AC</div>
                 <div class="button">+/-</div>
-                <div class="button">√</div>
+                <div class="button" id="root">√</div>
                 <div class="button">%</div>
                 <div class="button">DEL</div>
                 <div class="button" id="square">X^2</div>
