--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <div class="button ac" id="clear">AC</div>
                 <div class="button">+/-</div>
                 <div class="button" id="root">√</div>
-                <div class="button">%</div>
+                <div class="button" id="percent">%</div>
                 <div class="button">DEL</div>
                 <div class="button" id="square">X^2</div>
                 <div class="button" id="cube">X^3</div>
